// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`structs/kernel serializes and prints previous_kernel_data 1`] = `
"public_inputs: end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

private_call_count: 0xd
public_call_count: 0xe
new_commitments:
[ 0x101 0x102 0x103 0x104 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
l1_msg_stack:
[ 0x501 0x502 0x503 0x504 ]
new_contracts:
[ contract_address: 0x601
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0x603
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0x701
function_data:
function_selector: 702
is_private: 1
is_constructor: 1

emitted_events:
[ 0x801 0x802 0x803 0x804 ]
vk_hash: 0x703
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x702
function_data:
function_selector: 703
is_private: 1
is_constructor: 1

emitted_events:
[ 0x802 0x803 0x804 0x805 ]
vk_hash: 0x704
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x703
function_data:
function_selector: 704
is_private: 1
is_constructor: 1

emitted_events:
[ 0x803 0x804 0x805 0x806 ]
vk_hash: 0x705
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x704
function_data:
function_selector: 705
is_private: 1
is_constructor: 1

emitted_events:
[ 0x804 0x805 0x806 0x807 ]
vk_hash: 0x706
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
state_transitions:
[ leaf_index: 0x801
new_value: 0x802
 leaf_index: 0x802
new_value: 0x803
 leaf_index: 0x803
new_value: 0x804
 leaf_index: 0x804
new_value: 0x805
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
private_kernel_vk_tree_root: 0x104

public_data_tree_root: 0x105

tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x105
function_tree_root: 0x106
contract_address_salt: 0x107
portal_contract_address: 0x808080808080808080808080808080808080808


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]
"
`;

exports[`structs/kernel serializes and prints private_kernel_inputs 1`] = `
"signed_tx_request:
tx_request:
from: 0x1
to: 0x11
function_data: function_selector: 257
is_private: 1
is_constructor: 1

args: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 ]
nonce: 0x301
tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x401
function_tree_root: 0x402
contract_address_salt: 0x403
portal_contract_address: 0x404040404040404040404040404040404040404

chain_id: 0x501

signature: { 0101010101010101010101010101010101010101010101010101010101010101, 0202020202020202020202020202020202020202020202020202020202020202 }

previous_kernel:
public_inputs: end:
aggregation_object:
P0: { 0x1001, 0x1002 }
P1: { 0x1101, 0x1102 }
public_inputs: [
 0x1003
 0x1004
 0x1005
 0x1006
]
proof_witness_indices: [ 4103 4104 4105 4106 4107 4108 ]
has_data: 0

private_call_count: 0x100d
public_call_count: 0x100e
new_commitments:
[ 0x1101 0x1102 0x1103 0x1104 ]
new_nullifiers:
[ 0x1201 0x1202 0x1203 0x1204 ]
private_call_stack:
[ 0x1301 0x1302 0x1303 0x1304 0x1305 0x1306 0x1307 0x1308 ]
public_call_stack:
[ 0x1401 0x1402 0x1403 0x1404 0x1405 0x1406 0x1407 0x1408 ]
l1_msg_stack:
[ 0x1501 0x1502 0x1503 0x1504 ]
new_contracts:
[ contract_address: 0x1601
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0x1603
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0x1701
function_data:
function_selector: 1702
is_private: 1
is_constructor: 1

emitted_events:
[ 0x1801 0x1802 0x1803 0x1804 ]
vk_hash: 0x1703
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x1702
function_data:
function_selector: 1703
is_private: 1
is_constructor: 1

emitted_events:
[ 0x1802 0x1803 0x1804 0x1805 ]
vk_hash: 0x1704
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x1703
function_data:
function_selector: 1704
is_private: 1
is_constructor: 1

emitted_events:
[ 0x1803 0x1804 0x1805 0x1806 ]
vk_hash: 0x1705
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x1704
function_data:
function_selector: 1705
is_private: 1
is_constructor: 1

emitted_events:
[ 0x1804 0x1805 0x1806 0x1807 ]
vk_hash: 0x1706
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
state_transitions:
[ leaf_index: 0x1801
new_value: 0x1802
 leaf_index: 0x1802
new_value: 0x1803
 leaf_index: 0x1803
new_value: 0x1804
 leaf_index: 0x1804
new_value: 0x1805
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x1101
nullifier_tree_root: 0x1102
contract_tree_root: 0x1103
private_kernel_vk_tree_root: 0x1104

public_data_tree_root: 0x1105

tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x1105
function_tree_root: 0x1106
contract_address_salt: 0x1107
portal_contract_address: 0x808080808080808080808080808080808080808


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]

private_call:
call_stack_item:
contract_address: 0x2001
function_data: function_selector: 8194
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x2012
storage_contract_address: 0x2013
portal_contract_address: 0x2014
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args: [ 0x2111 0x2112 0x2113 0x2114 0x2115 0x2116 0x2117 0x2118 ]
return_values: [ 0x2311 0x2312 0x2313 0x2314 ]
emitted_events: [ 0x2211 0x2212 0x2213 0x2214 ]
new_commitments: [ 0x2411 0x2412 0x2413 0x2414 ]
new_nullifiers: [ 0x2511 0x2512 0x2513 0x2514 ]
private_call_stack: [ 0x2611 0x2612 0x2613 0x2614 ]
public_call_stack: [ 0x2711 0x2712 0x2713 0x2714 ]
l1_msg_stack: [ 0x2811 0x2812 ]
historic_private_data_tree_root: 0x3011
historic_nullifier_tree_root: 0x3111
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4

contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4



private_call_stack_preimages:
[ contract_address: 0x2011
function_data: function_selector: 2012
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x2022
storage_contract_address: 0x2023
portal_contract_address: 0x2024
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args: [ 0x2121 0x2122 0x2123 0x2124 0x2125 0x2126 0x2127 0x2128 ]
return_values: [ 0x2321 0x2322 0x2323 0x2324 ]
emitted_events: [ 0x2221 0x2222 0x2223 0x2224 ]
new_commitments: [ 0x2421 0x2422 0x2423 0x2424 ]
new_nullifiers: [ 0x2521 0x2522 0x2523 0x2524 ]
private_call_stack: [ 0x2621 0x2622 0x2623 0x2624 ]
public_call_stack: [ 0x2721 0x2722 0x2723 0x2724 ]
l1_msg_stack: [ 0x2821 0x2822 ]
historic_private_data_tree_root: 0x3021
historic_nullifier_tree_root: 0x3121
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4

contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


 contract_address: 0x2012
function_data: function_selector: 2013
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x2023
storage_contract_address: 0x2024
portal_contract_address: 0x2025
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args: [ 0x2122 0x2123 0x2124 0x2125 0x2126 0x2127 0x2128 0x2129 ]
return_values: [ 0x2322 0x2323 0x2324 0x2325 ]
emitted_events: [ 0x2222 0x2223 0x2224 0x2225 ]
new_commitments: [ 0x2422 0x2423 0x2424 0x2425 ]
new_nullifiers: [ 0x2522 0x2523 0x2524 0x2525 ]
private_call_stack: [ 0x2622 0x2623 0x2624 0x2625 ]
public_call_stack: [ 0x2722 0x2723 0x2724 0x2725 ]
l1_msg_stack: [ 0x2822 0x2823 ]
historic_private_data_tree_root: 0x3022
historic_nullifier_tree_root: 0x3122
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4

contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


 contract_address: 0x2013
function_data: function_selector: 2014
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x2024
storage_contract_address: 0x2025
portal_contract_address: 0x2026
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args: [ 0x2123 0x2124 0x2125 0x2126 0x2127 0x2128 0x2129 0x212a ]
return_values: [ 0x2323 0x2324 0x2325 0x2326 ]
emitted_events: [ 0x2223 0x2224 0x2225 0x2226 ]
new_commitments: [ 0x2423 0x2424 0x2425 0x2426 ]
new_nullifiers: [ 0x2523 0x2524 0x2525 0x2526 ]
private_call_stack: [ 0x2623 0x2624 0x2625 0x2626 ]
public_call_stack: [ 0x2723 0x2724 0x2725 0x2726 ]
l1_msg_stack: [ 0x2823 0x2824 ]
historic_private_data_tree_root: 0x3023
historic_nullifier_tree_root: 0x3123
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4

contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


 contract_address: 0x2014
function_data: function_selector: 2015
is_private: 1
is_constructor: 1

public_inputs: call_context: msg_sender: 0x2025
storage_contract_address: 0x2026
portal_contract_address: 0x2027
is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args: [ 0x2124 0x2125 0x2126 0x2127 0x2128 0x2129 0x212a 0x212b ]
return_values: [ 0x2324 0x2325 0x2326 0x2327 ]
emitted_events: [ 0x2224 0x2225 0x2226 0x2227 ]
new_commitments: [ 0x2424 0x2425 0x2426 0x2427 ]
new_nullifiers: [ 0x2524 0x2525 0x2526 0x2527 ]
private_call_stack: [ 0x2624 0x2625 0x2626 0x2627 ]
public_call_stack: [ 0x2724 0x2725 0x2726 0x2727 ]
l1_msg_stack: [ 0x2824 0x2825 ]
historic_private_data_tree_root: 0x3024
historic_nullifier_tree_root: 0x3124
contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4

contract_deployment_data: constructor_vk_hash: 0x1
function_tree_root: 0x2
contract_address_salt: 0x3
portal_contract_address: 0x4


 ]
proof:
[ 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 ]
vk:
key.composer_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

function_leaf_membership_witness:
leaf_index: 8241
sibling_path: [ 0x2031 0x2032 0x2033 0x2034 ]

contract_leaf_membership_witness:
leaf_index: 8225
sibling_path: [ 0x2021 0x2022 0x2023 0x2024 ]

portal_contract_address: 0x4141414141414141414141414141414141414141
acir_hash: 0x2061

"
`;

exports[`structs/kernel serializes and prints private_kernel_public_inputs 1`] = `
"end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

private_call_count: 0xd
public_call_count: 0xe
new_commitments:
[ 0x101 0x102 0x103 0x104 ]
new_nullifiers:
[ 0x201 0x202 0x203 0x204 ]
private_call_stack:
[ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 ]
public_call_stack:
[ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
l1_msg_stack:
[ 0x501 0x502 0x503 0x504 ]
new_contracts:
[ contract_address: 0x601
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0x603
 ]
optionally_revealed_data:
[ call_stack_item_hash: 0x701
function_data:
function_selector: 702
is_private: 1
is_constructor: 1

emitted_events:
[ 0x801 0x802 0x803 0x804 ]
vk_hash: 0x703
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x702
function_data:
function_selector: 703
is_private: 1
is_constructor: 1

emitted_events:
[ 0x802 0x803 0x804 0x805 ]
vk_hash: 0x704
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x703
function_data:
function_selector: 704
is_private: 1
is_constructor: 1

emitted_events:
[ 0x803 0x804 0x805 0x806 ]
vk_hash: 0x705
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0x704
function_data:
function_selector: 705
is_private: 1
is_constructor: 1

emitted_events:
[ 0x804 0x805 0x806 0x807 ]
vk_hash: 0x706
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
state_transitions:
[ leaf_index: 0x801
new_value: 0x802
 leaf_index: 0x802
new_value: 0x803
 leaf_index: 0x803
new_value: 0x804
 leaf_index: 0x804
new_value: 0x805
 ]

constants:
historic_tree_roots: private_historic_tree_roots: private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
private_kernel_vk_tree_root: 0x104

public_data_tree_root: 0x105

tx_context: is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: 
constructor_vk_hash: 0x105
function_tree_root: 0x106
contract_address_salt: 0x107
portal_contract_address: 0x808080808080808080808080808080808080808


is_private: 1
"
`;
